fix width scrollbars in vertical container for firefox stable

--- a/less/components/illustration.less
+++ b/less/components/illustration.less
@@ -5,6 +5,7 @@
     flex-direction: column;
     .image-container {
       margin-right: 0;
+      max-width: 100%;
     }
   }
   &.content-first {
@@ -44,7 +45,7 @@
   }
   img {
     border-radius: @image-border-radius;
-    width: 100%;
+    max-width: 100%;
   }
   @media screen and (min-width: @screen-sm-min) {
     display: flex;
